# Servers

./: .gitignore  CMakeLists copy.txt  CMakeLists.txt  CMakePresets.json  DimensionNightmare.ixx  GitAuth.sh  README.md  Start.bat  Start.cmd  Start.sh  main.cpp  main.ixx
Config/: Server.ini  ServerDebug.ini
HotReload/: HotReload.cpp  HotReload.ixx
HotReload/EntityHelper/: ClientEntityHelper.ixx  DNEntityHelper.ixx  ProxyEntityHelper.ixx  RoomEntityHelper.ixx  ServerEntityHelper.ixx
HotReload/ManagerHelper/: ClientEntityManagerHelper.ixx  EntityManagerHelper.ixx  ProxyEntityManagerHelper.ixx  RoomEntityManagerHelper.ixx  ServerEntityManagerHelper.ixx
HotReload/Message/: MessageDef.ixx  MessagePack.ixx
HotReload/Message/AuthMessage/: AuthCommon.ixx  AuthMessage.ixx
HotReload/Message/AuthMessage/Api/: ApiManager.ixx  Login.ixx
HotReload/Message/AuthMessage/Api/Auth/: User.ixx
HotReload/Message/CommonMessage/: CommonMessage.ixx  Msg_RegistSelf.ixx
HotReload/Message/ControlMessage/: ControlAuth.ixx  ControlCommon.ixx  ControlGlobal.ixx  ControlMessage.ixx  ControlRedirect.ixx
HotReload/Message/DatabaseMessage/: DatabaseCommon.ixx  DatabaseGate.ixx  DatabaseMessage.ixx
HotReload/Message/GateMessage/: GateClient.ixx  GateCommon.ixx  GateDedicated.ixx  GateGlobal.ixx  GateLogic.ixx  GateMessage.ixx  GateRedirect.ixx
HotReload/Message/GlobalMessage/: GlobalAuth.ixx  GlobalCommon.ixx  GlobalControl.ixx  GlobalGate.ixx  GlobalMessage.ixx  GlobalRedirect.ixx
HotReload/Message/LogicMessage/: LogicCommon.ixx  LogicDedicated.ixx  LogicGate.ixx  LogicMessage.ixx  LogicRedirect.ixx
HotReload/ServerHelper/AuthServer/: AuthServerHelper.ixx
HotReload/ServerHelper/ControlServer/: ControlServerHelper.ixx
HotReload/ServerHelper/DatabaseServer/: DatabaseServerHelper.ixx
HotReload/ServerHelper/GateServer/: GateServerHelper.ixx
HotReload/ServerHelper/GlobalServer/: GlobalServerHelper.ixx
HotReload/ServerHelper/LogicServer/: LogicServerHelper.ixx
HotReload/ServerHelper/Net/: DNClientProxyHelper.ixx  DNServerProxyHelper.ixx  DNWebProxyHelper.ixx
HotReload/ServerInit/: AuthServerInit.ixx  ControlServerInit.ixx  DatabaseServerInit.ixx  GateServerInit.ixx  GlobalServerInit.ixx  LogicServerInit.ixx  RegHandle.ixx  SessionServerInit.ixx
HotReload/Source/EntityHelper/: EntityHelper.ixx  ProxyEntityHelper.ixx  ServerEntityHelper.ixx
HotReload/Source/ManagerHelper/: EntityManagerControlHelper.ixx  EntityManagerHelper.ixx  ProxyEntityManagerHelper.ixx  ServerEntityManagerHelper.ixx
HotReload/Source/Message/AuthMessage/: AuthCommon.ixx  AuthControl.ixx  AuthMessage.ixx
HotReload/Source/Message/AuthMessage/Api/: ApiManager.ixx  Login.ixx
HotReload/Source/Message/CommonMessage/: CommonMessage.ixx  Msg_RegistSelf.ixx
HotReload/Source/Message/ControlMessage/: ControlAuth.ixx  ControlCommon.ixx  ControlGlobal.ixx  ControlMessage.ixx
HotReload/Source/Message/DatabaseMessage/: DatabaseCommon.ixx  DatabaseGate.ixx  DatabaseMessage.ixx
HotReload/Source/Message/GateMessage/: GateCommon.ixx  GateGlobal.ixx  GateMessage.ixx
HotReload/Source/Message/GlobalMessage/: GlobalAuth.ixx  GlobalCommon.ixx  GlobalControl.ixx  GlobalGate.ixx  GlobalMessage.ixx
HotReload/Source/Message/LogicMessage/: LogicCommon.ixx  LogicGlobal.ixx  LogicMessage.ixx
HotReload/Source/ServerHelper/: DNServerHelper.ixx
HotReload/Source/ServerHelper/AuthServer/: AuthServerHelper.ixx
HotReload/Source/ServerHelper/ControlServer/: ControlServerHelper.ixx
HotReload/Source/ServerHelper/DatabaseServer/: DatabaseServerHelper.ixx
HotReload/Source/ServerHelper/DatabaseServer/DatabaseObject/: DNDbObj.ixx
HotReload/Source/ServerHelper/GateServer/: GateServerHelper.ixx
HotReload/Source/ServerHelper/GlobalServer/: GlobalServerHelper.ixx
HotReload/Source/ServerHelper/LogicServer/: LogicServerHelper.ixx
HotReload/Source/ServerHelper/Net/: DNClientProxyHelper.ixx  DNServerProxyHelper.ixx  DNWebProxyHelper.ixx
HotReload/Source/ServerInit/: AuthServerInit.ixx  ControlServerInit.ixx  DatabaseServerInit.ixx  GateServerInit.ixx  GlobalServerInit.ixx  LogicServerInit.ixx  RegHandle.ixx
HotReload/Utils/: DbUtils.ixx  Macro.ixx
Program/: DimensionNightmare.ixx  main.ixx
Source/: DimensionNightmare.ixx  HotReload.ixx  TestExport.cpp  TestExport.h
Source/Afx/: AfxCommon.ixx  DbAfx.h  StdAfx.h  StdMacro.h
Source/Config/: ServerConfig.ixx
Source/DimensionNightmare/: DimensionNightmare.ixx
Source/Entity/: ClientEntity.ixx  DNEntity.ixx  Entity.ixx  NetEntity.ixx  ProxyEntity.ixx  RoomEntity.ixx  ServerEntity.ixx
Source/I10n/: I10nText.ixx
Source/Logger/: Logger.ixx
Source/Manager/: ActorManager.ixx  ClientEntityManager.ixx  EntityManager.ixx  ProxyEntityManager.ixx  RoomEntityManager.ixx  RoomManager.ixx  ServerEntityManager.ixx
Source/Memory/: ObjectTrace.ixx
Source/Message/: MessagePack.ixx
Source/Server/: Base.ixx  BaseServer.ixx  ControlServer.ixx  DNServer.ixx  GlobalServer.ixx  SessionServer.ixx
Source/Server/Auth/: AuthServer.ixx
Source/Server/Control/: ControlServer.ixx
Source/Server/Database/: DatabaseServer.ixx
Source/Server/Database/DatabaseObject/: DNDbObj.ixx
Source/Server/Gate/: GateServer.ixx
Source/Server/Global/: GlobalServer.ixx
Source/Server/Logic/: LogicServer.ixx
Source/Server/Net/: DNClientProxy.ixx  DNServerProxy.ixx  DNWebProxy.ixx
Source/Servers/: GateServer.ixx  LogicServer.ixx  SessionServer.ixx
Source/Servers/base/: DNTcpServer.ixx
Source/Std/: std.compat.ixx  std.ixx
Source/Task/: DNTask.ixx
Source/Utils/: DbUtils.ixx  FuncHelper.ixx  Macro.ixx  StrUtils.ixx
Test/: LibhvHttpServerTest.ixx  LibhvTcpClientCPPTest.ixx  LibhvTcpServerCPPTest.ixx  Test.cpp  Test.ixx
Test/grpc/: GrpcTest.ixx
Test/libhv/: LibhvHttpServerTest.ixx  LibhvTcpClientCPPTest.ixx  LibhvTcpServerCPPTest.ixx  LibhvTcpServerTest.ixx
